openshift/mvnpm-postgres.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mvnpm-postgres
spec:
  serviceName: mvnpm-postgres
  selector:
    matchLabels:
      app: mvnpm-postgres
  template:
    metadata:
      labels:
        app: mvnpm-postgres
    spec:
      containers:
        - name: mvnpm-postgres
          image: registry.redhat.io/rhel9/postgresql-16:latest
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: mvnpm-postgres-data
      volumes:
        - name: mvnpm-postgres-data
          persistentVolumeClaim:
            claimName: mvnpm-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mvnpm-postgres
spec:
  selector:
    app: mvnpm-postgres
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
