openshift/mvnpm-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/mvnpm/mvnpm
    app.quarkus.io/vcs-uri: https://github.com/mvnpm/mvnpm.git
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: mvnpm
  name: mvnpm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mvnpm
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: https://github.com/mvnpm/mvnpm
        app.quarkus.io/vcs-uri: https://github.com/mvnpm/mvnpm.git
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: mvnpm
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mvnpm
                topologyKey: kubernetes.io/hostname
      containers:
        - name: mvnpm
          image: quay.io/pkruger/mvnpm:5.1.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            periodSeconds: 1
            timeoutSeconds: 3
            failureThreshold: 10
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - mountPath: /mvnpm-data
              name: mvnpm-data
            - mountPath: /mvnpm-cert
              name: mvnpm-cert
              readOnly: true
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "4Gi"
      volumes:
        - name: mvnpm-data
          emptyDir:
            sizeLimit: 3Gi
        - name: mvnpm-cert
          secret:
            secretName: mvnpm-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/mvnpm/mvnpm
  labels:
    app.kubernetes.io/name: mvnpm
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: mvnpm
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: mvnpm
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/mvnpm/mvnpm
    app.quarkus.io/vcs-uri: https://github.com/mvnpm/mvnpm.git
    kubernetes.io/tls-acme: 'true'
    haproxy.router.openshift.io/balance: source
  labels:
    app.kubernetes.io/name: mvnpm
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: mvnpm.org
spec:
  host: mvnpm.org
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: mvnpm
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/mvnpm/mvnpm
    app.quarkus.io/vcs-uri: https://github.com/mvnpm/mvnpm.git
    kubernetes.io/tls-acme: 'true'
    haproxy.router.openshift.io/balance: source
  labels:
    app.kubernetes.io/name: mvnpm
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: repo.mvnpm.org
spec:
  host: repo.mvnpm.org
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: mvnpm
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/mvnpm/mvnpm
    app.quarkus.io/vcs-uri: https://github.com/mvnpm/mvnpm.git
    kubernetes.io/tls-acme: 'true'
    haproxy.router.openshift.io/balance: source
  labels:
    app.kubernetes.io/name: mvnpm
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: www.mvnpm.org
spec:
  host: www.mvnpm.org
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: mvnpm
